alignment fix

--- a/assets/styles/login-theme.css
+++ b/assets/styles/login-theme.css
@@ -54,6 +54,7 @@ body{
 
 .split-right > .inner-container{
     margin:50px 10px 0px 10px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
